--- a/public/css/brandfood.css
+++ b/public/css/brandfood.css
@@ -1,23 +1,28 @@
 body
 {
-    background-image: url('/img/login.jpg');
-}
-body::before{
-content: "";
-display: block;
-position: absolute;
-z-index: -1;
-width: 100%;
-height: 100%;
-top: 0;
+        min-height: 100vh;
+        background-image: url('/img/login.jpg');
+        background-repeat: no-repeat;
+        background-size: cover;
+        background-position: center;
+        background-attachment: fixed;
+    }
+
+body:before {
+    content: "";
+    position: absolute;
+    z-index: -1;
+    width: 100%;
+    height: 100%;
+    top: 0;
 left: 0;
-background: #005bea;
-background: -webkit-linear-gradient(bottom, #005bea, #00c6fb);
-background: -o-linear-gradient(bottom, #005bea, #00c6fb);
-background: -moz-linear-gradient(bottom, #005bea, #00c6fb);
-background: linear-gradient(bottom, #005bea, #00c6fb);
-opacity: 0.9;
+background: -webkit-linear-gradient(90deg, #005bea, #00c6fb);
+background: -o-linear-gradient(90deg, #005bea, #00c6fb);
+background: -moz-linear-gradient(90deg, #005bea, #00c6fb);
+background: linear-gradient(90deg, #005bea, #00c6fb);
+opacity: 0.7;
 }
+
 label{
 color: white;
 }
@@ -25,17 +30,14 @@ color: white;
 {
     color:#666666;
 }
-.titulo_heading
-{
-color : #00c6fb !important;
-}
 
-.item__image{
-    max-height: 80px;
-    max-width: 80px;
-    margin: 15px;
-    box-shadow: 0 1px 1px rgba(0, 0, 0, 0.2);
-}
+.item__image {
+        margin-bottom: 15px;
+        box-shadow: 0 5px 5px rgba(0, 100, 0, 0.2);
+        width: 100%;
+        height: 100%;
+        max-height: 100px;
+    }
 .thumbnail {
     box-shadow: 0 1px 5px #fff;
     background-color:rgba(255,240,255,0.4);
@@ -177,7 +179,19 @@ color : #00c6fb !important;
     margin-right: 10px;
 }
 
+table
+{
+    background-color: rgba(255,240,255,0.4);
+}
+.navbar-brand
+{
+    color: #38c172
 
+}
+.navbar-brand:hover {
+    color: #fff;
+
+}
  #mute {
         position: absolute;
       }
